<resources>
    <string name="app_name">필로우톡</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="white_space">&#160;</string>
    <string name="pillowtalk_default_error_message">잠시 후 다시 시도해 주세요.</string>
    <string name="pillowtalk_feedback_reset_password">[필로우톡] 비밀번호를 재설정하고 싶어요!</string>
    <string name="pillowtalk_feedback_inquire">[필로우톡] 이런 점이 아쉬워요 !</string>
    <string name="dialog_title">제목</string>
    <string name="dialog_body">내용</string>
    <string name="dialog_cancel">취소</string>
    <string name="dialog_confirm">확인</string>
    <string name="record_permission_denied_title">녹음 권한 설정</string>
    <string name="record_permission_denied_body">음성 채팅을 사용하려면 녹음 권한을 허용 해주셔야 합니다.</string>
    <string name="animated_sign_up_error_title">에러</string>
    <string name="animated_sign_up_error_confirm">확인</string>
    <string name="answer_confirm_title">답변을 보내시겠어요?</string>
    <string name="answer_confirm_body">작성한 답변을 상대방에게 보낼게요.\n보낸 후에는 답변을 수정할 수 없어요.</string>
    <string name="answer_confirm_confirm">보내기</string>
    <string name="answer_cancel_title">답변 작성을 그만두시겠어요?</string>
    <string name="answer_cancel_body">현재 작성된 내용은 삭제돼요.</string>
    <string name="answer_cancel_confirm">나가기</string>
    <string name="challenge_add_cancel_title">챌린지 등록을 그만두시겠어요?</string>
    <string name="challenge_add_cancel_body">현재 작성한 내용은 삭제돼요.</string>
    <string name="challenge_add_cancel_cancel">계속하기</string>
    <string name="challenge_add_cancel_confirm">삭제하기</string>
    <string name="challenge_edit_cancel_title">챌린지 수정을 그만두시겠어요?</string>
    <string name="challenge_edit_cancel_body">현재 수정한 내용은 저장되지 않아요.</string>
    <string name="challenge_edit_cancel_cancel">계속하기</string>
    <string name="challenge_edit_cancel_confirm">나가기</string>
    <string name="delete_challenge_title">챌린지를 삭제하시겠어요?</string>
    <string name="delete_challenge_body">삭제한 챌린지는 복구할 수 없어요.</string>
    <string name="delete_challenge_cancel">유지하기</string>
    <string name="delete_challenge_confirm">삭제하기</string>
    <string name="complete_challenge_title">챌린지를 완료하셨나요?</string>
    <string name="complete_challenge_cancel">아니요</string>
    <string name="complete_challenge_confirm">네!</string>
    <string name="deleted_challenge_chat_title">앗! 챌린지를 찾을 수 없어요😅</string>
    <string name="deleted_challenge_chat_body">이미 삭제된 챌린지예요.</string>
    <string name="partner_reset_help_chat_expired_title">이미 연인을 도왔어요</string>
    <string name="partner_reset_help_chat_expired_body">이전에 연인을 도와 준 경험이 있어요.\n한 번 요청할 때 한 번 도울 수 있어요.</string>
    <string name="partner_reset_help_chat_success_title">연인 돕기 완료!</string>
    <string name="partner_reset_help_chat_success_body">연인이 암호를 재설정하러 갔어요.\n곧 필로우톡에서 만나요!</string>
    <string name="notification_read">읽음</string>
    <string name="notification_reply">답장</string>
    <string name="notification_partner">연인</string>
    <string name="notification_me">나</string>
    <string name="notification_bubble">ChatBubble</string>
    <string name="splash_slogan">오늘도 연인에 대해 더 알아가봐요!</string>
    <string name="onboarding_title_1">오늘 내 기분은 말이야</string>
    <string name="onboarding_title_2">너의 취향이 궁금해!</string>
    <string name="onboarding_title_3">우리 좀 더 가까워져 볼까?</string>
    <string name="onboarding_body_1">귀여운 필롱이로 연인에게\n오늘의 시그널을 보낼 수 있어요!</string>
    <string name="onboarding_body_2">하루에 하나, 질문에 답변해 보세요.\n서로의 취향에 더 가까워질 거예요.</string>
    <string name="onboarding_body_3">더 진솔한 대화를 나눠보세요.\n연인의 가장 깊은 곳을 알게 될 거예요.</string>
    <string name="onboarding_done">지금 바로 시작하기</string>
    <string name="sign_up_slogan">연인들의 건강하고 즐거운 대화</string>
    <string name="sign_up_kakao">카카오로 계속하기</string>
    <string name="sign_up_naver">네이버로 계속하기</string>
    <string name="sign_up_google">Google로 계속하기</string>
    <string name="sign_up_apple">Apple로 계속하기</string>
    <string name="sign_up_inquire">문의사항이 있으신가요?</string>
    <string name="sign_up_title">회원가입</string>
    <string name="sign_up_start_guide">필로우톡은 성인을 위한 공간으로\n성인인증 후 즐길 수 있어요</string>
    <string name="sign_up_start_guide_2">필로우톡은 청소년 보호법에 의거하여\n만 19세 미만 청소년들은 이용할 수 없습니다.</string>
    <string name="sign_up_start_button">성인인증 하기</string>
    <string name="sign_up_default_guide">서비스 이용을 위해 인증 정보를 입력해 주세요.</string>
    <string name="sign_up_name_hint">이름</string>
    <string name="sign_up_birth_hint">생년월일 6자리</string>
    <string name="sign_up_birth_hyphen">-</string>
    <string name="sign_up_mobile_carrier_1">SKT</string>
    <string name="sign_up_mobile_carrier_2">KT</string>
    <string name="sign_up_mobile_carrier_3">LG U+</string>
    <string name="sign_up_mobile_carrier_4">SKT 알뜰폰</string>
    <string name="sign_up_mobile_carrier_5">KT 알뜰폰</string>
    <string name="sign_up_mobile_carrier_6">LG 알뜰폰</string>
    <string name="sign_up_phone_number_hint">01012345678</string>
    <string name="sign_up_agreement">본인인증 이용약관에 동의합니다.</string>
    <string name="sign_up_agreement_warning">본인인증 약관에 동의해주세요.</string>
    <string name="sign_up_auth_code_request_hint">인증번호를 요청해주세요</string>
    <string name="sign_up_auth_code_request_button">인증요청</string>
    <string name="sign_up_auth_code_input_hint">인증번호를 입력해주세요</string>
    <string name="sign_up_auth_code_retry_button">재요청</string>
    <string name="sign_up_auth_code_warning">입력한 인증정보가 올바르지 않은 경우, 인증번호가 도착하지 않을 수 있어요.</string>
    <string name="sign_up_auth_code_warning_error_1">인증번호 입력시간을 초과했어요. 다시 요청해주세요.</string>
    <string name="sign_up_auth_code_warning_error_2">인증번호를 다시 확인해주세요.</string>
    <string name="sign_up_auth_code_timer">mm:ss</string>
    <string name="sign_up_person_info_invalid_dialog_title">개인정보가 올바르지 않아요</string>
    <string name="sign_up_person_info_invalid_dialog_body">입력하신 정보를 다시 확인해주세요.</string>
    <string name="sign_up_auth_done_button">인증완료</string>
    <string name="sign_up_auth_pop_back_dialog_title">정말 뒤로 가시겠어요?</string>
    <string name="sign_up_auth_pop_back_dialog_body">작성된 내용이 존재합니다.</string>
    <string name="mobile_carrier_title">통신사를 선택해주세요.</string>
    <string name="auth_agreement_title">본인인증을 위한 약관에 동의해주세요.</string>
    <string name="auth_agreement_agree_all">전체 동의하기</string>
    <string name="auth_agreement_agree_prefix">[필수]</string>
    <string name="auth_agreement_agree_1">개인정보이용동의</string>
    <string name="auth_agreement_agree_2">고유식별정보처리동의</string>
    <string name="auth_agreement_agree_3">서비스이용약관동의</string>
    <string name="auth_agreement_agree_4">통신사이용약관동의</string>
    <string name="auth_agreement_done">다음</string>
    <string name="sign_up_title_sign_up">회원가입</string>
    <string name="sign_up_title_couple_code">연인코드 연결</string>
    <string name="sign_up_next_button">다음</string>
    <string name="sign_up_succeed">연인과 연결되었어요 !</string>
    <string name="agreement_title_need_adult">서비스 이용을 위해\n성인인증을 진행해주세요</string>
    <string name="agreement_title_need_agree">이용약관에 동의해주세요</string>
    <string name="agreement_adult_announce">만 19세 이상임을 인증하면\n연인과 함께 필로우톡을 이용할 수 있어요</string>
    <string name="agreement_certify_adult">성인인증 하기</string>
    <string name="agreement_certify_adult_done">성인인증 완료</string>
    <string name="agreement_agree_all">약관 및 개인, 민감정보 수집, 이용 동의</string>
    <string name="agreement_requirement">[필수]</string>
    <string name="agreement_option">[선택]</string>
    <string name="agreement_agree_adult">만 19세 이상입니다.</string>
    <string name="agreement_agree_service">서비스 이용 약관 동의</string>
    <string name="agreement_agree_privacy">개인정보 수집 및 서비스 활용 동의</string>
    <string name="agreement_agree_sensitive">민감정보 수집 및 서비스 활용 동의</string>
    <string name="agreement_agree_marketing">마케팅 정보 수신 동의 (푸시 알림)</string>
    <string name="nickname_title">닉네임을 입력해주세요</string>
    <string name="nickname_sub_title">연인에게 보여줄 닉네임을 적어주세요.</string>
    <string name="nickname_edit_text_label">닉네임</string>
    <string name="nickname_edit_text_hint">닉네임을 입력해주세요</string>
    <string name="nickname_alert">여러분의 소중한 성생활이 노출되지 않도록 본명이 유추되지 않는 닉네임으로 설정해주세요.</string>
    <string name="nickname_max_num">/10</string>
    <string name="nickname_default_num">0</string>
    <string name="nickname_warning_1">닉네임에 특수문자/공백은 사용할 수 없어요.</string>
    <string name="nickname_warning_2">닉네임은 최대 10자까지 만들 수 있어요</string>
    <string name="couple_code_title">연인에게 보낼 초대장을 준비했어요</string>
    <string name="couple_code_sub_title">연결코드를 공유해 기기를 연결해주세요\n코드를 공유받았다면, 하단 버튼을 눌러 입력해주세요</string>
    <string name="couple_code_invitation">나의 연결코드</string>
    <string name="couple_code_share">코드복사</string>
    <string name="couple_code_reload">새로고침</string>
    <string name="couple_code_show_sheet">공유받은 코드 입력</string>
    <string name="couple_code_couple_connect_title">상대방의 코드를 입력해주세요</string>
    <string name="couple_code_couple_connect_hint">연결코드 입력하기</string>
    <string name="couple_connect_title">상대방의 코드를 입력해주세요</string>
    <string name="couple_connect_hint">연결코드 입력하기</string>
    <string name="couple_connect_button">연결하기</string>
    <string name="main_navigation_home">홈</string>
    <string name="main_navigation_question">질문</string>
    <string name="main_navigation_chat">채팅</string>
    <string name="main_navigation_challenge">챌린지</string>
    <string name="main_navigation_my_page">마이</string>
    <string name="home_answer_state_title_1">오늘도 서로에 대해 더 알아가봐요!</string>
    <string name="home_answer_state_title_2">님이 답변을 기다리고 있어요!</string>
    <string name="home_answer_state_title_3">상대방의 답변을 기다리고 있어요</string>
    <string name="home_answer_state_title_4">오늘의 질문에 대해 필로우톡해봐요</string>
    <string name="home_today_question_mention">오늘도 서로에 대해 더 알아가봐요!</string>
    <string name="home_sub_title">두근두근!</string>
    <string name="home_main_title_deco">번째 질문이 도착했어요</string>
    <string name="home_main_answer_button_1">답변하기</string>
    <string name="home_main_answer_button_2">답변보기</string>
    <string name="home_signal_title">오늘의 시그널</string>
    <string name="home_partner">상대방</string>
    <string name="home_me">나</string>
    <string name="home_poke_snackbar_title">연인이 아직 답변을 작성하지 않았어요.</string>
    <string name="home_poke_snackbar_button">콕찌르기</string>
    <string name="signal_title">오늘 내 기분을\n연인에게 보내봐요 !</string>
    <string name="signal_percent_100">시그널 100%</string>
    <string name="signal_percent_75">시그널 75%</string>
    <string name="signal_percent_50">시그널 50%</string>
    <string name="signal_percent_25">시그널 25%</string>
    <string name="signal_percent_0">시그널 0%</string>
    <string name="signal_subtitle_100">나 오늘 준비됐어 !</string>
    <string name="signal_subtitle_75">오늘 사랑 충만 !</string>
    <string name="signal_subtitle_50">나도 날 잘 모르겠어</string>
    <string name="complete_title">챌린지 성공 👏</string>
    <string name="complete_content">기대하던 챌린지를 완료했어요.</string>
    <string name="complete_button">우리 진짜 최고야!</string>
    <string name="break_up_couple_title">연인끊기</string>
    <string name="break_up_couple_record_deco">연인과 함께한</string>
    <string name="break_up_couple_record_default_value">0</string>
    <string name="break_up_couple_question_record">개의 질문 답변 내용과</string>
    <string name="break_up_couple_challenge_record">개의 챌린지 기록이 있어요</string>
    <string name="break_up_couple_warning_title">연인을 끊기 전 꼭 확인해주세요</string>
    <string name="break_up_couple_warning_item_1">연인과 쌓아온 모든 데이터 및 개인정보가 사라져요</string>
    <string name="break_up_couple_warning_item_2">재연결 및 데이터 복구 가능 기간은 30일이예요</string>
    <string name="break_up_couple_warning_item_3">재연결 시, 해당 계정으로 로그인과 연결을 진행해야해요</string>
    <string name="break_up_couple_agree_all">내용을 모두 확인했습니다.</string>
    <string name="break_up_couple_last_warning">아래 연인 끊기 버튼을 누르면\n상대방과의 연결이 즉시 끊어지니 신중하게 결정해주세요.</string>
    <string name="break_up_couple_confirm">연인끊기</string>
    <string name="item_chat_owner_partner_name">상대</string>
    <string name="item_chat_owner_partner_suffix">의 답변</string>
    <string name="item_chat_default_text">grapes vanilla carnival florence marshmallow cresent serendipity flutter like laptop way bijou lovable charming.</string>
    <string name="item_chat_default_date_text">12월 24일 (금)</string>
</resources>