<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/n_selector_home"
        android:title="@string/main_navigation_home" />

    <item
        android:id="@+id/navigation_question"
        android:icon="@drawable/n_selector_question"
        android:title="@string/main_navigation_question" />

    <item
        android:id="@+id/navigation_challenge"
        android:icon="@drawable/n_selector_challenge"
        android:title="@string/main_navigation_challenge" />

    <item
        android:id="@+id/navigation_my_page"
        android:icon="@drawable/n_selector_my_page"
        android:title="@string/main_navigation_my_page" />

</menu>