<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.clonect.feeltalk.release_presentation.ui.mainNavigation.home.HomeFragment"
        android:label="@string/main_navigation_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_question"
        android:name="com.clonect.feeltalk.release_presentation.ui.mainNavigation.question.QuestionFragment"
        android:label="@string/main_navigation_question"
        tools:layout="@layout/fragment_question" />

    <fragment
        android:id="@+id/navigation_challenge"
        android:name="com.clonect.feeltalk.release_presentation.ui.mainNavigation.challenge.ChallengeFragment"
        android:label="@string/main_navigation_challenge"
        tools:layout="@layout/fragment_challenge" />

    <fragment
        android:id="@+id/navigation_my_page"
        android:name="com.clonect.feeltalk.release_presentation.ui.mainNavigation.myPage.MyPageFragment"
        android:label="@string/main_navigation_my_page"
        tools:layout="@layout/fragment_my_page" />
</navigation>