<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginHorizontal="20dp"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="7dp"
    android:gravity="start">

    <LinearLayout
        android:id="@+id/layout_chat_owner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal"
        android:gravity="center">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_my_emotion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            app:cardElevation="0dp"
            app:cardCornerRadius="157dp"
            app:cardBackgroundColor="@android:color/transparent">

            <ImageView
                android:id="@+id/iv_my_profile"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/image_partner_default_profile"/>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/text_partner_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_chat_owner_partner_name"
            android:textColor="@color/item_chat_owner_text_color"
            android:textSize="14sp"
            android:lines="1"
            android:ellipsize="end"
            android:fontFamily="@font/pretendard_bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_chat_owner_partner_suffix"
            android:textColor="@color/item_chat_owner_text_color"
            android:textSize="14sp"
            android:lines="1"
            android:ellipsize="end"
            android:fontFamily="@font/pretendard_medium"/>
    </LinearLayout>

    <TextView
        android:id="@+id/text_chat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/background_item_chat_partner"
        android:fontFamily="@font/pretendard_regular"
        android:maxWidth="260dp"
        android:padding="10dp"
        android:text="@string/item_chat_default_text"
        android:textColor="@color/item_chat_partner_text_color"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/text_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/item_chat_default_date_text"
        android:textSize="11sp"
        android:textColor="@color/item_chat_date_text_color"
        android:fontFamily="@font/pretendard_regular"/>
</LinearLayout>