<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical"
    android:elevation="5dp">

    <ImageView
        android:id="@+id/lav_complete_check"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:src="@drawable/n_image_challenge_complete"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/complete_title"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:fontFamily="@font/pretendard_semi_bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="19dp"
        android:text="@string/complete_content"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:fontFamily="@font/pretendard_regular"/>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/mcv_complete_button"
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:layout_marginHorizontal="20dp"
        app:cardBackgroundColor="@color/black"
        app:cardCornerRadius="30dp"
        app:cardElevation="0dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/complete_button"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:fontFamily="@font/pretendard_medium"/>
    </com.google.android.material.card.MaterialCardView>
</LinearLayout>