<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".new_presentation.ui.mainNavigation.myPage.partnerSetting.breakUpCouple.BreakUpCoupleFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_exit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackgroundBorderless"
            android:src="@drawable/n_ic_exit"
            android:padding="12dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/break_up_couple_title"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:fontFamily="@font/pretendard_medium"
            android:layout_gravity="center"
            android:includeFontPadding="false"
            android:lineSpacingExtra="5dp"
            android:letterSpacing="-0.01"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="28dp"
        android:layout_marginBottom="10dp"
        android:text="@string/break_up_couple_record_deco"
        android:textColor="@color/gray_600"
        android:textSize="18sp"
        android:fontFamily="@font/pretendard_medium"
        android:includeFontPadding="false"
        android:lineSpacingExtra="5dp"
        android:letterSpacing="-0.01"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="4dp"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/tv_question_record"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:text="@string/break_up_couple_record_default_value"
            android:textColor="@color/main_500"
            android:textSize="28sp"
            android:fontFamily="@font/pretendard_bold"
            android:includeFontPadding="false"
            android:lineSpacingExtra="8dp"
            android:letterSpacing="-0.01"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/break_up_couple_question_record"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:fontFamily="@font/pretendard_medium"
            android:includeFontPadding="false"
            android:lineSpacingExtra="7dp"
            android:letterSpacing="-0.01"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="20dp"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/tv_challenge_record"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:text="@string/break_up_couple_record_default_value"
            android:textColor="@color/main_500"
            android:textSize="28sp"
            android:fontFamily="@font/pretendard_bold"
            android:includeFontPadding="false"
            android:lineSpacingExtra="8dp"
            android:letterSpacing="-0.01"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/break_up_couple_challenge_record"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:fontFamily="@font/pretendard_medium"
            android:includeFontPadding="false"
            android:lineSpacingExtra="7dp"
            android:letterSpacing="-0.01"/>
    </LinearLayout>

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="13dp"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:src="@drawable/n_ic_warning"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/break_up_couple_warning_title"
            android:textColor="@color/system_error"
            android:textSize="16sp"
            android:fontFamily="@font/pretendard_semi_bold"
            android:includeFontPadding="false"
            android:lineSpacingExtra="5dp"
            android:letterSpacing="-0.01"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="20dp"
        android:paddingVertical="16dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:src="@drawable/n_ic_notice_square" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/break_up_couple_warning_item_1"
                android:textColor="@color/black"
                android:textSize="13sp"
                android:fontFamily="@font/pretendard_regular"
                android:includeFontPadding="false"
                android:lineSpacingExtra="4dp"
                android:letterSpacing="-0.01"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginVertical="8dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:src="@drawable/n_ic_notice_square" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/break_up_couple_warning_item_2"
                android:textColor="@color/black"
                android:textSize="13sp"
                android:fontFamily="@font/pretendard_regular"
                android:includeFontPadding="false"
                android:lineSpacingExtra="4dp"
                android:letterSpacing="-0.01"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:src="@drawable/n_ic_notice_square" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/break_up_couple_warning_item_3"
                android:textColor="@color/black"
                android:textSize="13sp"
                android:fontFamily="@font/pretendard_regular"
                android:includeFontPadding="false"
                android:lineSpacingExtra="4dp"
                android:letterSpacing="-0.01"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_agree_all"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="20dp"
        android:paddingVertical="20dp"
        android:paddingHorizontal="12dp"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/iv_agree_all_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:src="@drawable/n_ic_round_disagree" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/break_up_couple_agree_all"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:fontFamily="@font/pretendard_semi_bold"
            android:includeFontPadding="false"
            android:lineSpacingExtra="5dp"
            android:letterSpacing="-0.01"/>
    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="16dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:text="@string/break_up_couple_last_warning"
        android:textColor="@color/gray_500"
        android:textSize="14sp"
        android:fontFamily="@font/pretendard_regular"
        android:includeFontPadding="false"
        android:lineSpacingExtra="4dp"
        android:letterSpacing="-0.01"/>


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/mcv_confirm"
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:layout_marginHorizontal="20dp"
        app:cardBackgroundColor="@color/gray_400"
        app:cardCornerRadius="30dp"
        app:cardElevation="0dp"
        app:strokeColor="@color/black"
        app:strokeWidth="0dp"
        app:rippleColor="@color/gray_200"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/tv_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/break_up_couple_confirm"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:fontFamily="@font/pretendard_medium"
            android:includeFontPadding="false"
            android:lineSpacingExtra="5dp"
            android:letterSpacing="-0.01" />
    </com.google.android.material.card.MaterialCardView>
</LinearLayout>