<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/n_background_bottom_sheet_rounded"
    tools:context=".new_presentation.ui.mainNavigation.challenge.complete.CompleteFragment">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lav_complete_check"
        android:layout_width="147dp"
        android:layout_height="147dp"
        android:padding="25dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        app:lottie_rawRes="@raw/challenge_success_image"
        app:lottie_autoPlay="false"
        app:lottie_loop="false"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/complete_title"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:fontFamily="@font/pretendard_semi_bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="19dp"
        android:text="@string/complete_content"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:fontFamily="@font/pretendard_regular"/>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/mcv_complete_button"
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:layout_marginHorizontal="20dp"
        app:cardBackgroundColor="@color/black"
        app:cardCornerRadius="30dp"
        app:cardElevation="0dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/complete_button"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:fontFamily="@font/pretendard_medium"/>
    </com.google.android.material.card.MaterialCardView>
</LinearLayout>